# react-native-press-ripple

./: .gitignore  README.md  nitro.json  package.json  react-native-press-ripple-1.0.0.tgz  react-native.config.js  tsconfig.json
.claude/: settings.local.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  settings.gradle
android/src/main/java/com/margelo/nitro/pressripple/: HybridPressRipple.kt  PressRippleView.kt  ReactNativePressRipplePackage.kt
src/: PressRipple.tsx  index.ts
src/specs/: PressRipple.nitro.ts
src/types/: index.ts
